# serializer version: 1
# name: test_binary_sensors[binary_sensor.fakespa_circulation_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.fakespa_circulation_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Circulation pump',
    'platform': 'balboa',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'circ_pump',
    'unique_id': 'FakeSpa-Circ Pump-c0ffee',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.fakespa_circulation_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'FakeSpa Circulation pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.fakespa_circulation_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.fakespa_filter_cycle_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.fakespa_filter_cycle_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Filter cycle 1',
    'platform': 'balboa',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'filter_1',
    'unique_id': 'FakeSpa-Filter1-c0ffee',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.fakespa_filter_cycle_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'FakeSpa Filter cycle 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.fakespa_filter_cycle_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.fakespa_filter_cycle_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.fakespa_filter_cycle_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Filter cycle 2',
    'platform': 'balboa',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'filter_2',
    'unique_id': 'FakeSpa-Filter2-c0ffee',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.fakespa_filter_cycle_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'FakeSpa Filter cycle 2',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.fakespa_filter_cycle_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
